<resources>
    <string name="app_name">Better Nutrition</string>
    <string name="title_activity_signup">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="_18_5_25_kg_m2">18.5 – 25 kg/m2</string>
    <string name="normal_bmi_range">সাধারণ বিএমআই পরিসীমা:</string>
    <string name="notification_text"> reminder to drink a cup of water</string>
    <string name="notification_string">Water Reminder</string>
    <string name="reminders_title">Reminders</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_button_calculate">Calculate</string>
    <string name="text_button_exit">Exit</string>
    <string name="default_show_result"> </string>
    <string name="default_show_bmi"> Enter weight (kg) and height (m) </string>
    <string name="text_label_kg">kg</string>
    <string name="text_label_m">m</string>
    <string name="your_score">Your Score</string>
    <string name="content_button_calculate">Calculate your BMI</string>
    <string name="content_button_exit">Exit application</string>
    <string name="content_show_result"> </string>
    <string name="content_show_bmi"> </string>
    <string name="content_user_answer">Key your weight as Kg</string>
    <string name="all">সকল পোষ্ট</string>
    <string name="one">রোগ ও পথ্য</string>
    <string name="two">খাদ্য ও পুষ্টি</string>
    <string name="three">নিউট্রিশনাল মেডিসিন</string>
    <string name="four">মা ও শিশু</string>
    <string name="five">যোগ ও ব্যায়াম</string>
    <string name="Nutritionist">পরিচিতি</string>
    <string name="Social">সামাজিক পোস্ট</string>
    <string-array name="category">
        <item>নিউট্রিশন</item>
        <item>আয়ুর্বেদিক</item>
        <item>হোমিওপ্যাথি</item>
        <item>বাংলা সাহিত্য</item>
        <item>ইংরেজি সাহিত্য</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="bmi">বি এম আই</string>
    <string name="wt">আপনার ওজন দিন</string>
    <string name="ht">আপনার উচ্চতা(ফিট) </string>
    <string name="res">বি এম আই:</string>
    <string name="status">স্ট্যাটাস:</string>
    <string name="normal">
সাধারণ</string>
    <string name="weak">দুর্বল</string>
    <string name="Obesity">স্থূলতা</string>
    <string name="diebetis_diet">
       \t ডায়াবেটিস আক্রান্তের জন্য ডায়েট\n\n
কী খাবেন :\n\n
•    পর্যাপ্ত পরিমাণে পানি পান\n
•    খাদ্য তালিকায় অন্তত তিন ধরনের তাজা সবজি থাকতে হবে\n
•    প্রতিদিন একই সময়ে খাবার খান\n
•    কম ফ্যাটযুক্ত দুধ পান করুন\n
•    প্রতিদিন কম করে ২০-২৫ গ্রাম কাঁচা পেঁয়াজ খান\n
•    খানিকটা দারুচিনি খেতে পারেন\n
•    নিয়মিত পরিমাণমতো তাজা ফল খেতে হবে\n
•    মনে রাখতে হবে যতটা সম্ভব হারবাল চা পান করতে হবে, ক্যাফেইন চায়ের পরিবর্তে।\n\n


খাবেন না বা কম খাবেন :\n
•    কখনও বেশি পরিমাণে খাওয়া চলবে না\n
•    যেসব খাদ্য বা পানীয়তে চিনির পরিমাণ বেশি থাকে সেসব বর্জন করতে হবে\n
•    কাঁচা লবণ নয়\n
•    বেশি ভাজা ও তৈলাক্ত খাবার খাওয়া যাবে না\n
•    প্রতিদিন দু কাপের বেশি চা বা কফি\n\n
•    দুধ খেতে হলে ফ্যাট কমিয়ে খেতে হবে\n
•    পনির খেতে হবে ফ্যাট ছাড়া\n
•    ভাত, আলু, কলা এবং গাজর রক্তে চিনির পরিমাণ বাড়ায়। সুতরাং যত কম খাবেন, তত ভালো।\n

ডায়াবেটিসে আক্রান্ত হন তাহলে এগুলো তো অবশ্যই পালনীয়। খাবারের সঙ্গে সঙ্গে চিকিৎসকের পরামর্শমতো ব্যায়াম করুন ও ওষুধ খান।

    </string>
    <string name="fishkata">

        মাছের কাঁটা গলায় ফুটেছে? পেনিক না করে ট্রাই করুন সহজ এই ঘরোয়া উপায়\n\n
By ইন্দ্রাণী মুখার্জ্জী \n\n
মাছে-ভাতে বাঙালি, তাই খাবার সময়ে পাতে এক টুকরো মাছ না পড়লে খাওয়াটা যেন ঠিক সম্পূর্ণ হয় না। তবে মাছ খেতে অনেকেই ভয় পান বিশেষত কাঁটা বেছে খাওয়ার জন্য। অনেকেই এমন রয়েছেন যাঁরা কাঁটা বেছে মাছ খেতে পারেন না। আবার এমন অনেকেই রয়েছেন, যাঁদের মাছ খাওয়ার সময়ে গলায় কাঁটা বিঁধে যাওয়র অভিজ্ঞতা ভয়াবহ।\n\n
বিশেষত ইলিশ, বাটা, চারাপোনা বা ফ্যাসা জাতীয় মাছের কাঁটা এতটাই সুক্ষ্ম হয় যে, অনেকসময়ে সাবধানতা অবলম্বন করলেও গলায় মাছের কাঁটা বিঁধে যাওয়ার একটা সম্ভাবনা থেকেই যায়।\n\n
যদি মাছের কাঁটা গলায় বিঁধে যায়, তাহলে বেশি ভয় পাওয়ার কোনও প্রয়োজন নেই। এখন আমি এমন কয়েকটি ঘরোয়া টোটকার কথা বলব, যা মেনে চললে, গলায় মাছের কাঁটা ফোটার হাত থেকে মুক্তি পাবেন সহজেই। জেনে নিন সেগুলি কী কী-\n\n
১. শুকনো সাদা ভাত\n\n

•	অনেকেই হয়তো এই টোটকাটা জানেন, কিন্তু যাঁরা জানেন না তাঁদের জন্য আরও একবার বলি।
•	তা হল সাদা ভাত খানিকটা নিয়ে তা ছোট ছোট বলের আকারে বানিয়ে নিন।
•	এবার সেই বলগুলি না চিবিয়ে আস্তে আস্তে গিলে নেওয়ার চেষ্টা করুন।
•	এই পদ্ধতি মেনে চললে, সঙ্গে সঙ্গে না হলেও খানিকক্ষণ পরে কিন্তু গলায় বিঁধে থাকা কাঁটা সহজেই বেরিয়ে আসবে।\n\n
২. নুন জল
•	গলায় কাঁটা ফুটলে অনেকেই হয়তো ঢগঢগ করে জল খেয়ে নেন এই ভেবেই যে, জলের সঙ্গে কাঁটা নরম হয়ে বেরিয়ে যাবে।
•	কিন্তু শুধু জল পান করলেই হবে না, জলের সঙ্গে সামান্য পরিমাণে নুন মিশিয়ে নিন, দেখবেন কাঁটা নরম হয়ে গিয়ে নেমে গিয়েছে।\n\n
•	তবে সেক্ষেত্রে জলটা ঈষদ উষ্ণ হলে খুব ভাল হয়।
৩. কলা\n\n

•	গলায় কাঁটা ফুটলে তা বের করার এ এক প্রাচীন টোটকা, যা মা-দিদিমার আমল থেকে চলে আসছে।
•	তবে পাকা কলা যতটা সম্ভব না চিবিয়ে গিলে খাওয়ার চেষ্টা করুন, এতে করে বিঁধে থাকা কাঁটা কলার সঙ্গে সহজে নীচে নেমে যাবে।\n\n
৪. লেবুর রস\n\n
•	লেবুর রস কিন্তু খুব সহজেই গলা থেকে মাছের কাঁটা নরম করে ফেলতে সাহায্য করে।
•	উপকার পেতে এক টুকরো পাতিলেবুর রসের সঙ্গে একটুখানি নুন মিশিয়ে নিন।
•	এবার সেই নুন আর লেবুর মিশ্রণ খেয়ে নিন।
•	লেবুর মধ্যে থাকা অ্যাসিড মাছের কাঁটা নরম করে দিতে সাহায্য করে।\n\n
৫. ভিনিগার\n\n
•	লেবুর পরিবর্তে আর যে জিনিসটি গলায় বিঁধে থাকা মাছের কাঁটা বের করে দিতে সাহায্য করে, তা হল ভিনিগার।
•	জলের সঙ্গে সামান্য পরিমাণ ভিনিগার মিশিয়ে নিয়েও খেতে পারেন।
•	এটি অনেকটা লেবুর মতোই কাজ করে।
•	তবে খুব ভাল হয় যদি এক চামচ ভিনিগার গিলে খেতে পারেন।\n\n
৬. অলিভ অয়েল\n\n
•	অলিভ অয়েল মাছের কাঁটা বের করার এক আধুনিক পদ্ধতি।
•	আজকাল প্রায় সকলেই মোটামোটি স্বাস্থ্য সচেতন। তাই অলিভ অয়েলে রান্না অনেকেই করে থাকেন।
•	বিশেষজ্ঞরা বলেন অলিভ অয়েল স্যালাডে মিশিয়েও খাওয়া যায়। তাই অলিভ অয়েল কাঁচা খেলে ক্ষতি নেই।\n\n
•	যদি অসাবধানতায় গলায় মাছের কাঁটা ফুটে যায়, তাহলে এক চামচ অলিভ অয়েল খেয়ে নিন, দেখবেন খুব সহজেই গলা থেকে মাছের কাঁটা নেমে যাবে।\n\n
৭. কোক জাতীয় পানীয়\n\n
•	এটা একটা আধুনিক পদ্ধতি, যার সাহায্যে গলা থেকে মাছের কাঁটা খুব সহজেই বেরিয়ে আসতে পারে।
•	সেক্ষেত্রে গলায় যদি মাছের কাঁটা বিঁধে যায় তাহলে এক গ্লাস কোক খেয়ে নিন।
•	এতে করে গলায় বিঁধে থাকা কাঁটা খুব সহজেই বেরিয়ে যাবে।\n\n
বিশেষ কয়েকটি বিষয় খেয়াল রাখবেন\n\n
•	যে বিষয়টা না বললেই নয়, তা হল গলায় কাঁটা বিঁধে গেলে গলায় আঙুল ঢুকিয়ে খোঁচানোর চেষ্টা করবেন না।\n\n
•	সেরকম হলে খুব জোরে দু-একবার কাশুন।\n
•	কাশির ফলে অনেক সময় গলায় বিঁধে যাওয়া কাঁটা উল্টো দিকে অর্থাৎ মুখের দিকে উঠে আসতে পারে।\n
•	যদি কোন কিছুতেই কাঁটা গলা থেকে নামানো না যায়, তাহলে সময় নষ্ট না করে বরং ডাক্তারের কাছে দেখিয়ে নেওয়া বেশি বুদ্ধিমানের মত কাজ হবে।

    </string>
    <string name="vitamina">
        \t\tভিটামিন-এ\t\n\n


প্রতিদিনের খাদ্যে কার্বোহাইড্রেট প্রোটিন ও ফ্যাট জাতীয় মৌল ছাড়াও আরো কিছু এলিমেন্ট আছে যা অল্পমাত্রায় শরীরে প্রয়োজন। \n\n
        আর এর অভাব জনিত কারণেই আমাদের দেহ রোগাক্রান্ত হয়ে পড়ে। বিজ্ঞানী হপকিংস “অত্যাবশ্যক সহায়ক খাদ্য উপাদান” বলে এগুলো কে অভিহিত করেন।
        ১৯১২ সালে বিজ্ঞানী ক্যাসিমির ফাঙ্ক, এলিমেন্ট গুলির নামকরন করেন “ভিটামিন”।\n\n



ভিটামিন এর বৈশিষ্ট্য:\n\n

১. খুব অল্প মাত্রায় আমাদের দেহে এটা প্রয়োজন\n

২.ভিটামিন প্রাণীদেহের অর্গানিক ক্যাটালাইস্ট\n

৩.ম্যাক্সিমাম ভিটামিন কো-এনজাইম রূপে উৎসেচক এর সঙ্গে সঙ্গবদ্ধ হয়ে ক্রিয়া করে।\n

৪.বেশিরভাগ ভিটামিন মেটাবলিজম-এ ড্যামেজ হলেও পাচন ক্রিয়া এর ওপর কোন প্রভাব সৃষ্টি করতে পারে না।\n

৫.উদ্ভিদ, সংশ্লেষণ এর মাধ্যমে অধিকাংশ ভিটামিন উৎপন্ন করে, কয়েকটি ভিটামিন যেমন ভিটামিন এ, ভিটামিন ডি, ভিটামিন বি-টুয়েলভ, ভিটামিন কে, যা সাধারণতঃ প্রাণীদেহেই সংশ্লেষিত হয়।\n

৬.কিছু কিছু ভিটামিন দেহের মধ্যেই স্টোর করা থাকে।\n
দেহে ভিটামিনের অভাব ঘটলে তাকে বিজ্ঞানের ভাষায় আভিটামিনোসিস বলে।\n

প্রয়োজনের তুলনায় আমাদের শরীরে ভিটামিন কম থাকলে তাকে হাইপোভিটামিনোসিস বলে অভিহিত করা হয়।\n\n



দেহের মধ্যে সঞ্চিত ভিটামিন সমূহ\n\n
১.প্রো ভিটামিনঃ\n

প্রো ভিটামিন এমন একটি ভিটামিন যা যৌগ থেকে সংশ্লেষিত হয়। আর ওই যৌগ গুলিকেই প্রো-ভিটামিন বলে। ভিটামিন এ এর প্রো ভিটামিন হল বিটা ক্যারোটিন।\n

২.অ্যান্টি ভিটামিনঃ\n

আমাদের শরীরে যে যৌগ গুলি ভিটামিনের কাজে বাধার সৃষ্টি করে সেই যৌগগুলোকে অ্যান্টি ভিটামিন বলে। \nপাইরিথিয়ামিন, ভিটামিন বি-ওয়ান এর অ্যান্টি ভিটামিন হিসেবে কাজ করে।\n

৩.সিউডো ভিটামিনঃ\n

প্রাণীদেহের যে জৈব যৌগ গুলি ভিটামিন-এর পরিপূরক, কিন্তু কাজের দিক থেকে ভিটামিনের সমগুন নয়। মিথাইল কোবালামিন, ভিটামিন বি টুয়েলভএর সিউডো ভিটামিন।\n\n

ভিটামিনের উৎস, কাজ ও অভাবজনিত রোগঃ\n
ভিটামিন-এ\n
ভিটামিনের উৎসঃউদ্ভিদ এবং প্রাণী উভয়-এই ভিটামিন উৎপন্ন করে।\n
উদ্ভিদ উৎসঃ বাঁধাকপি, গাজর, সবুজ শাকসবজি, পেঁপে, পালং শাক, পাকা আম ইত্যাদি হল ভিটামিনের উদ্ভিজ্জ উৎস।\n

প্রাণিজ উৎসঃ কিছু কিছু মাছের যকৃত নিঃসৃত তেল যেমন হেলি বার্ড, হাঙ্গর ইত্যাদি, ডিমের কুসুম, দুধ, মাখন হল ভিটামিন এর প্রাণিজ উৎস।




    </string>
    <string name="h_it">
       আইটি পেশাদারদের জন্য স্বাস্থ্য পরামর্শ\n\n
1. দিনটির একটি স্বাস্থ্যকর সূচনা করুন\n
         2. অহেতুক স্ন্যাকিং এড়ান\n
         ৩. স্বাস্থ্যকর স্ন্যাক্স বেছে নিন\n

৪. আপনার তরল গ্রহণ বাড়ান \n
         ৫. শ্বাস প্রশ্বাস ব্যায়াম। \n
         6. ডেস্ক অনুশীলন।\n

7. আরও শারীরিক কাজ।\n
         8. পর্যাপ্ত ঘুম।\n
         9. সময় বন্ধ করুন।
    </string>
    <string name="one_a">নবজাতক শিশু</string>
    <string name="two_a">গর্ভকালীন পরিচর্যা</string>
    <string name="three_a">
        গর্ভবতী মা ও শিশুর পুষ্টি উপাদান
    </string>
    <string name="four_a">
        মায়ের দুধ শিশুর জীবনধারণ
    </string>
    <string name="five_a">শিশুর লালন পালন ও পরিচর্যা</string>
    <string name="six">
        বয়স মানানসই খাবার
    </string>
    <string name="seven">
       সদ্যজাত শিশুর যত্ন
    </string>
    <string name="eight">
    শিশুরা মেদবহুল হয়
</string>
    <string name="nine">
    শিশুদের ওপর সেলফোনের ক্ষতিকারক প্রভাব
</string>
    <string name="ten">শিশুর কাছে মাতৃদুগ্ধের গুরুত্ব??</string>
    <string name="elven">অটিজমের প্রাকৃতিক বিকল্প চিকিৎসা</string>
    <string name="twoelve">শিশু এবং তাদের খাদ্যাভ্যাস</string>
    <string name="thirteen">শিশুদের ঘুমের ব্যাপারে</string>
    <string name="two_m">
     জিঙ্ক
</string>
    <string name="four_m">
          ম্যাংগানিজ
    </string>
    <string name="five_m">
        ক্রোমিয়াম
    </string>
    <string name="seven_m">
        ফ্লোরিন
    </string>
    <string name="eight_m">
         সেলেনিয়াম
    </string>
    <string name="nine_m">
         লোহা
    </string>
    <string name="one_v">
  ভিটামিন এ
</string>
    <string name="two_v">
   ভিটামিন বি
</string>
    <string name="four_v">
ভিটামিন ডি
</string>
    <string name="five_v">
    ভিটামিন ই
</string>
    <string name="six_v">
ভিটামিন-কে
</string>
    <string name="three_v">
 ভিটামিন সি
</string>
    <string name="one_m">
 আয়োডিনের কাজ
</string>
</resources>