<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".NewVitaminActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp"

            android:layout_height="wrap_content">



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one_v"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/one_v"
                android:drawableLeft="@drawable/ic_forum"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two_v"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/two_v"
                android:drawableLeft="@drawable/ic_forum"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_v"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/three_v"
                android:drawableLeft="@drawable/ic_forum"

                />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/four_v"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/four_v"
                android:drawableLeft="@drawable/ic_forum"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/five_v"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/fv_v"
                android:drawableLeft="@drawable/ic_forum"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/six_v"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/sx_v"
                android:drawableLeft="@drawable/ic_forum"

                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one_m"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/svn_v"
                android:drawableLeft="@drawable/ic_forum"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two_m"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/eght_v"
                android:drawableLeft="@drawable/ic_forum"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/four_m"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/nine_v"
                android:drawableLeft="@drawable/ic_forum"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/five_m"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/tenn_v"
                android:drawableLeft="@drawable/ic_forum"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seven_m"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/elven_v"
                android:drawableLeft="@drawable/ic_forum"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eight_m"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/twoelve_v"
                android:drawableLeft="@drawable/ic_forum"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nine_m"
                android:layout_marginBottom="8dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/thirteena_v"
                android:drawableLeft="@drawable/ic_forum"

                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>