<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MomchildActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"

        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:layout_height="wrap_content">



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one_a"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/one"
                android:drawableLeft="@drawable/ic_forum"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two_a"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/two_id"
                android:drawableLeft="@drawable/ic_forum"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_a"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/three_three"
                android:drawableLeft="@drawable/ic_forum"

                />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/four_a"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/four_id"
                android:drawableLeft="@drawable/ic_forum"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/five_a"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/fv_id"
                android:drawableLeft="@drawable/ic_forum"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/six"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/sx_id"
                android:drawableLeft="@drawable/ic_forum"

                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seven"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/svn_id"
                android:drawableLeft="@drawable/ic_forum"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eight"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/eght_id"
                android:drawableLeft="@drawable/ic_forum"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nine"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/nine_id"
                android:drawableLeft="@drawable/ic_forum"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ten"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/tenn_id"
                android:drawableLeft="@drawable/ic_forum"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/elven"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/elven_id"
                android:drawableLeft="@drawable/ic_forum"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/twoelve"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/twoelve_id"
                android:drawableLeft="@drawable/ic_forum"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thirteen"
                android:layout_marginBottom="8dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/thirteena_id"
                android:drawableLeft="@drawable/ic_forum"

                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>